@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4OpenGLImmediateSceneHandler.cc,v 1.6 2001-08-14 18:03:16 johna Exp $
+// $Id: G4OpenGLImmediateSceneHandler.cc,v 1.7 2002-02-24 01:47:55 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -40,8 +40,6 @@
 // Also seems to be required for HP's CC and AIX xlC, at least.
 
 #include <GL/gl.h>
-#include <GL/glx.h>
-#include <GL/glu.h>
 
 #include "G4OpenGLSceneHandler.hh"
 #include "G4OpenGLViewer.hh"
