@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4OpenGLStoredX.cc,v 1.7 2001-07-11 10:08:55 gunter Exp $
+// $Id: G4OpenGLStoredX.cc,v 1.8 2002-02-24 01:48:17 johna Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -32,8 +32,6 @@
 #ifdef G4VIS_BUILD_OPENGLX_DRIVER
 
 #include <GL/gl.h>
-#include <GL/glx.h>
-#include <GL/glu.h>
 
 #include "G4VisFeaturesOfOpenGL.hh"
 #include "G4VSceneHandler.hh"
